--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>示例页面</title>
+<title>leo-0728's page</title>
 </head>
 <body>
 <h1>这是一个标题</h1>
 <p>这是一个段落</p>
 <a href="https://www.example.com">这是一个链接</a>
+
 <a href="https://www.github.com/leo-0728/leo-0728.github.io">代码仓库地址</a>
 </body>
 </html>
