--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
 <h1>这是一个标题</h1>
 <p>这是一个段落</p>
-<a href="https://www.example.com">这是一个链接</a>
-
+<a href="https://www.example.com">这是一个链接<br></a>
 <a href="https://www.github.com/leo-0728/leo-0728.github.io">代码仓库地址</a>
 </body>
 </html>
